// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowMetadata - private mode modal operates 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [MockFunction],
    }
  }
  isPublic={false}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": false,
      "read_only": false,
    }
  }
>
  <ul
    className="WF-meta"
  >
    <li
      className="WF-meta--item content-3 t-m-gray attribution"
    >
      <span
        className="content-3 t-m-gray"
      >
        by 
        Harry Harrison
      </span>
      <span
        className="content-3 metadataSeparator t-m-gray"
      >
        -
      </span>
    </li>
    <li
      className="WF-meta--item content-3 t-m-gray"
    >
      Updated 
      now
    </li>
    <li
      className="WF-meta--item content-3 t-m-gray"
    >
      <div
        className="WF-meta--item test-button"
        onClick={[Function]}
      >
        <span
          className="content-3 metadataSeparator t-m-gray"
        >
          -
        </span>
        <span
          className="publicPrivate"
        >
          private
        </span>
      </div>
    </li>
  </ul>
  <Modal
    autoFocus={true}
    backdrop={true}
    backdropTransition={
      Object {
        "mountOnEnter": true,
        "timeout": 150,
      }
    }
    centered={false}
    fade={true}
    isOpen={true}
    keyboard={true}
    modalTransition={
      Object {
        "timeout": 300,
      }
    }
    onClosed={[Function]}
    onOpened={[Function]}
    role="dialog"
    toggle={[Function]}
    zIndex={1050}
  >
    <Portal
      node={
        <div
          style="position: relative; z-index: 1050;"
          tabindex="-1"
        >
          <div
            class=""
          >
            <div
              class="modal fade"
              role="dialog"
              style="display: block;"
              tabindex="-1"
            >
              <div
                class="modal-dialog"
                role="document"
              >
                <div
                  class="modal-content"
                >
                  <div
                    class="dialog-header modal-header"
                  >
                    <h5
                      class="modal-title"
                    >
                      <span
                        class="t-d-gray title-4"
                      >
                        PRIVACY SETTING
                      </span>
                    </h5>
                    <button
                      aria-label="Close"
                      class="close"
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                      >
                        ×
                      </span>
                    </button>
                  </div>
                  <div
                    class="modal-body"
                  >
                    <div
                      class="row d-flex align-items-center mb-5"
                    >
                      <div
                        class="col-sm-3"
                      >
                        <div
                          class="action-button button-gray test-button-gray"
                        >
                          Public
                        </div>
                      </div>
                      <div
                        class="col-sm-9"
                      >
                        <div
                          class="info-2"
                        >
                          Anyone can access and duplicate the workflow or any of its modules
                        </div>
                      </div>
                    </div>
                    <div
                      class="row d-flex align-items-center"
                    >
                      <div
                        class="col-sm-3"
                      >
                        <div
                          class="action-button button-blue--fill"
                        >
                          Private
                        </div>
                      </div>
                      <div
                        class="col-sm-9"
                      >
                        <div
                          class="info-2"
                        >
                          Only you can access and edit the workflow
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class=" modal-footer"
                  >
                    <div
                      class="action-button button-gray"
                    >
                      Cancel
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="modal-backdrop fade"
            />
          </div>
        </div>
      }
    >
      <div
        className=""
      >
        <Fade
          appear={true}
          baseClass="fade"
          baseClassActive="show"
          className="modal"
          enter={true}
          exit={true}
          in={true}
          mountOnEnter={false}
          onClick={[Function]}
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          onKeyUp={[Function]}
          role="dialog"
          style={
            Object {
              "display": "block",
            }
          }
          tabIndex="-1"
          tag="div"
          timeout={300}
          unmountOnExit={false}
        >
          <Transition
            appear={true}
            enter={true}
            exit={true}
            in={true}
            mountOnEnter={false}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={300}
            unmountOnExit={false}
          >
            <div
              className="modal fade"
              onClick={[Function]}
              onKeyUp={[Function]}
              role="dialog"
              style={
                Object {
                  "display": "block",
                }
              }
              tabIndex="-1"
            >
              <div
                className="modal-dialog"
                role="document"
              >
                <div
                  className="modal-content"
                >
                  <ModalHeader
                    className="dialog-header"
                    closeAriaLabel="Close"
                    tag="h5"
                    toggle={[Function]}
                    wrapTag="div"
                  >
                    <div
                      className="dialog-header modal-header"
                    >
                      <h5
                        className="modal-title"
                      >
                        <span
                          className="t-d-gray title-4"
                        >
                          PRIVACY SETTING
                        </span>
                      </h5>
                      <button
                        aria-label="Close"
                        className="close"
                        onClick={[Function]}
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                        >
                          ×
                        </span>
                      </button>
                    </div>
                  </ModalHeader>
                  <ModalBody
                    tag="div"
                  >
                    <div
                      className="modal-body"
                    >
                      <div
                        className="row d-flex align-items-center mb-5"
                      >
                        <div
                          className="col-sm-3"
                        >
                          <div
                            className="action-button button-gray test-button-gray"
                            onClick={[Function]}
                          >
                            Public
                          </div>
                        </div>
                        <div
                          className="col-sm-9"
                        >
                          <div
                            className="info-2"
                          >
                            Anyone can access and duplicate the workflow or any of its modules
                          </div>
                        </div>
                      </div>
                      <div
                        className="row d-flex align-items-center"
                      >
                        <div
                          className="col-sm-3"
                        >
                          <div
                            className="action-button button-blue--fill"
                            onClick={[Function]}
                          >
                            Private
                          </div>
                        </div>
                        <div
                          className="col-sm-9"
                        >
                          <div
                            className="info-2"
                          >
                            Only you can access and edit the workflow
                          </div>
                        </div>
                      </div>
                    </div>
                  </ModalBody>
                  <div
                    className=" modal-footer"
                  >
                    <div
                      className="action-button button-gray"
                      onClick={[Function]}
                    >
                      Cancel
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </Transition>
        </Fade>
        <Fade
          appear={true}
          baseClass="fade"
          baseClassActive="show"
          className="modal-backdrop"
          enter={true}
          exit={true}
          in={true}
          mountOnEnter={true}
          onEnter={[Function]}
          onEntered={[Function]}
          onEntering={[Function]}
          onExit={[Function]}
          onExited={[Function]}
          onExiting={[Function]}
          tag="div"
          timeout={150}
          unmountOnExit={false}
        >
          <Transition
            appear={true}
            enter={true}
            exit={true}
            in={true}
            mountOnEnter={true}
            onEnter={[Function]}
            onEntered={[Function]}
            onEntering={[Function]}
            onExit={[Function]}
            onExited={[Function]}
            onExiting={[Function]}
            timeout={150}
            unmountOnExit={false}
          >
            <div
              className="modal-backdrop fade"
            />
          </Transition>
        </Fade>
      </div>
    </Portal>
  </Modal>
</WorkflowMetadata>
`;

exports[`WorkflowMetadata - private mode modal operates 2`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [MockFunction] {
        "calls": Array [
          Array [
            100,
            true,
          ],
        ],
      },
    }
  }
  isPublic={false}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": false,
      "read_only": false,
    }
  }
>
  <ul
    className="WF-meta"
  >
    <li
      className="WF-meta--item content-3 t-m-gray attribution"
    >
      <span
        className="content-3 t-m-gray"
      >
        by 
        Harry Harrison
      </span>
      <span
        className="content-3 metadataSeparator t-m-gray"
      >
        -
      </span>
    </li>
    <li
      className="WF-meta--item content-3 t-m-gray"
    >
      Updated 
      now
    </li>
    <li
      className="WF-meta--item content-3 t-m-gray"
    >
      <div
        className="WF-meta--item test-button"
        onClick={[Function]}
      >
        <span
          className="content-3 metadataSeparator t-m-gray"
        >
          -
        </span>
        <span
          className="publicPrivate"
        >
          private
        </span>
      </div>
    </li>
  </ul>
</WorkflowMetadata>
`;

exports[`WorkflowMetadata - private mode renders correctly 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [MockFunction],
    }
  }
  isPublic={false}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": false,
      "read_only": false,
    }
  }
>
  <ul
    className="WF-meta"
  >
    <li
      className="WF-meta--item content-3 t-m-gray attribution"
    >
      <span
        className="content-3 t-m-gray"
      >
        by 
        Harry Harrison
      </span>
      <span
        className="content-3 metadataSeparator t-m-gray"
      >
        -
      </span>
    </li>
    <li
      className="WF-meta--item content-3 t-m-gray"
    >
      Updated 
      now
    </li>
    <li
      className="WF-meta--item content-3 t-m-gray"
    >
      <div
        className="WF-meta--item test-button"
        onClick={[Function]}
      >
        <span
          className="content-3 metadataSeparator t-m-gray"
        >
          -
        </span>
        <span
          className="publicPrivate"
        >
          private
        </span>
      </div>
    </li>
  </ul>
</WorkflowMetadata>
`;

exports[`WorkflowMetadata - private mode renders correctly in read-only mode 1`] = `
<WorkflowMetadata
  api={
    Object {
      "setWorkflowPublic": [MockFunction],
    }
  }
  isPublic={true}
  test_now={2017-09-20T21:03:52.000Z}
  workflow={
    Object {
      "id": 100,
      "last_update": 1505941432000,
      "owner_name": "Harry Harrison",
      "public": true,
      "read_only": true,
    }
  }
>
  <ul
    className="WF-meta"
  >
    <li
      className="WF-meta--item content-3 t-m-gray attribution"
    >
      <span
        className="content-3 t-m-gray"
      >
        by 
        Harry Harrison
      </span>
      <span
        className="content-3 metadataSeparator t-m-gray"
      >
        -
      </span>
    </li>
    <li
      className="WF-meta--item content-3 t-m-gray"
    >
      Updated 
      now
    </li>
    <li
      className="WF-meta--item content-3 t-m-gray"
    />
  </ul>
</WorkflowMetadata>
`;
